--- a/index.html
+++ b/index.html
@@ -74,7 +74,47 @@
                     <span><button class="btn">Button</button></span>
                   </div>
             </p>
-
+            <img src="assests/oriento-maVIpNNtmlQ-unsplash.jpg" alt="NATUREZA VASE">
+            <br>
+            <br>
+            <span>NATUREZA VASE</span>
+            <span>$37.00</span>
+            <p>
+                Tincidunt praesent semper feugiat nibh
+                sed. Vulputate mi sit amet mauris
+                commodo quis imperdiet massa. Amet
+                tellus cras adipiscing enim eu turpis
+                egestas pretium aenean
+                <br>
+                <div class="container">
+                  <span>LEARN MORE</span>
+                    <span><button class="btn">Button</button></span>
+                  </div>
+                  <br>
+                  <br>
+                  <img src="assests/tom-crew-bgIO-u4GEfI-unsplash.jpg" alt="FEIRA BOWLS">
+                  <br>
+                  <br>
+                  <span>FEIRA BOWLS</span>
+                  <p>
+                    Tincidunt praesent semper feugiat nibhsed. Vulputate mi sit amet mauris
+                    commodo quis imperdiet massa. Amettellus cras adipiscing enim eu turpis
+                    egestas pretium aenean.
+                  </p>
+                  <span>$29.00</span>
+                   <br>
+                <div class="container">
+                  <span>LEARN MORE</span>
+                    <span><button class="btn">Button</button></span>
+                    <img src="assests/tom-crew-3uwu5K0RtaE-unsplash.jpg" alt="NATUREZA POTS">
+                    <br>
+                    <br>
+                    <span>NATUREZA POTS</span>
+                    <span>$59.00</span>
+                    <div class="container">
+                        <span>LEARN MORE</span>
+                          <span><button class="btn">Button</button></span>
+            </p>
         </section>
     </main>
     <footer></footer>
