Added PEDRA VASE + VIAJA POTS to html file + images, discriptions and prices

--- a/index.html
+++ b/index.html
@@ -87,34 +87,76 @@
                 egestas pretium aenean
                 <br>
                 <div class="container">
-                  <span>LEARN MORE</span>
+                    <span>LEARN MORE</span>
                     <span><button class="btn">Button</button></span>
-                  </div>
-                  <br>
-                  <br>
-                  <img src="assests/tom-crew-bgIO-u4GEfI-unsplash.jpg" alt="FEIRA BOWLS">
-                  <br>
-                  <br>
-                  <span>FEIRA BOWLS</span>
-                  <p>
-                    Tincidunt praesent semper feugiat nibhsed. Vulputate mi sit amet mauris
-                    commodo quis imperdiet massa. Amettellus cras adipiscing enim eu turpis
-                    egestas pretium aenean.
-                  </p>
-                  <span>$29.00</span>
-                   <br>
-                <div class="container">
-                  <span>LEARN MORE</span>
-                    <span><button class="btn">Button</button></span>
-                    <img src="assests/tom-crew-3uwu5K0RtaE-unsplash.jpg" alt="NATUREZA POTS">
-                    <br>
-                    <br>
-                    <span>NATUREZA POTS</span>
-                    <span>$59.00</span>
-                    <div class="container">
-                        <span>LEARN MORE</span>
-                          <span><button class="btn">Button</button></span>
+                </div>
             </p>
+            <br>
+            <br>
+            <img src="assests/tom-crew-bgIO-u4GEfI-unsplash.jpg" alt="FEIRA BOWLS">
+            <br>
+            <br>
+            <span>FEIRA BOWLS</span>
+            <span>$29.00</span>
+            <p>
+                Tincidunt praesent semper feugiat nibhsed. Vulputate mi sit amet mauris
+                commodo quis imperdiet massa. Amettellus cras adipiscing enim eu turpis
+                egestas pretium aenean.
+                <br>
+                <div class="container">
+                <span>LEARN MORE</span>
+                <span><button class="btn">Button</button></span>
+                <br>
+            </p>
+            <img src="assests/tom-crew-3uwu5K0RtaE-unsplash.jpg" alt="NATUREZA POTS">
+            <br>
+            <br>
+            <span>NATUREZA POTS</span>
+            <span>$59.00</span>
+            <br>
+            <p>
+                Tincidunt praesent semper feugiat nibh
+                sed. Vulputate mi sit amet mauris
+                commodo quis imperdiet massa. Amet
+                tellus cras adipiscing enim eu turpis
+                egestas pretium aenean
+                <br>
+                <div class="container">
+                <span>LEARN MORE</span>
+                <span><button class="btn">Button</button></span>
+                <br>
+            </p>
+            <img src="assests/linh-le-a0rE64YJDA4-unsplash.jpg" alt="PEDRA VASE">
+            <br>
+            <br>
+            <span>PEDRA VASE</span>
+            <span>$31.00</span>
+            <p>
+                Tincidunt praesent semper feugiat nibh
+                sed. Vulputate mi sit amet mauris
+                commodo quis imperdiet massa. Amet
+                tellus cras adipiscing enim eu turpis
+                egestas pretium aenean
+                <div class="container">
+                    <span>LEARN MORE</span>
+                    <span><button class="btn">Button</button></span>
+            </p>
+            <br>
+            <img src="assests/tom-crew-oiZAQvxTcYQ-unsplash.jpg" alt="VIAJA POTS">
+            <br>
+            <span>VIAJA POTS</span>
+            <span>$57.00</span>
+            <p>
+                Tincidunt praesent semper feugiat nibh
+                sed. Vulputate mi sit amet mauris
+                commodo quis imperdiet massa. Amet
+                tellus cras adipiscing enim eu turpis
+                egestas pretium aenean
+                <div class="container">
+                    <span>LEARN MORE</span>
+                    <span><button class="btn">Button</button></span>
+            </p>
+            <br>
         </section>
     </main>
     <footer></footer>
