Added all images + details + discriptions + footer and texts to HTML file

--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
             <li>ABOUT</li>
             <li>PRODUCTS</li>
             <li>CONTACT</li>
+            <span><img src="assests/icons8-pottery-96.png" alt="Pottery icon"></span>
             <li>CHART</li>
         </nav>
     </header>
     <main>
-        <section class="home">
+        <section class="HOME">
             <h1> <img src="assests/earl-wilcox-y3W0CzO063w-unsplash-alt.jpg" alt="CERAMICS CRAFTED BY HAND... FROM THE GROUND UP">
             </h1>
         </section>
@@ -32,6 +33,7 @@
                 amet commodo.
                 <br>
                 <br>
+                <img src="assests/Vase_Dame_2048x2048.jpg" alt="Vacse_Dame_20">
                 <br>
                 Nulla porttitor massa id neque aliquam
                 vestibulum morbi. Facilisi nullam vehicula
@@ -47,6 +49,7 @@
                 dictum sit amet justo donec enim.
                 <br>
                 <br>
+                <img src="assests/Cylinder_unglazed3_2048x2048.jpg" alt="Cylinder_unglazed">
                 <br>
                 Tincidunt praesent semper feugiat nibh sed.
                 Vulputate mi sit amet mauris commodo quis
@@ -71,7 +74,7 @@
                 <br>
                 <div class="container">
                   <span>LEARN MORE</span>
-                    <span><button class="btn">Button</button></span>
+                    <span><button class="btn">ADD TO CART</button></span>
                   </div>
             </p>
             <img src="assests/oriento-maVIpNNtmlQ-unsplash.jpg" alt="NATUREZA VASE">
@@ -88,7 +91,7 @@
                 <br>
                 <div class="container">
                     <span>LEARN MORE</span>
-                    <span><button class="btn">Button</button></span>
+                    <span><button class="btn">ADD TO CART</button></span>
                 </div>
             </p>
             <br>
@@ -104,10 +107,11 @@
                 egestas pretium aenean.
                 <br>
                 <div class="container">
-                <span>LEARN MORE</span>
-                <span><button class="btn">Button</button></span>
-                <br>
+                    <span>LEARN MORE</span>
+                    <span><button class="btn">ADD TO CART</button></span>
+                </div>
             </p>
+            <br>
             <img src="assests/tom-crew-3uwu5K0RtaE-unsplash.jpg" alt="NATUREZA POTS">
             <br>
             <br>
@@ -122,10 +126,11 @@
                 egestas pretium aenean
                 <br>
                 <div class="container">
-                <span>LEARN MORE</span>
-                <span><button class="btn">Button</button></span>
-                <br>
+                    <span>LEARN MORE</span>
+                    <span><button class="btn">ADD TO CART</button></span>
+                </div>
             </p>
+            <br>
             <img src="assests/linh-le-a0rE64YJDA4-unsplash.jpg" alt="PEDRA VASE">
             <br>
             <br>
@@ -139,7 +144,8 @@
                 egestas pretium aenean
                 <div class="container">
                     <span>LEARN MORE</span>
-                    <span><button class="btn">Button</button></span>
+                    <span><button class="btn">ADD TO CART</button></span>
+                </div>
             </p>
             <br>
             <img src="assests/tom-crew-oiZAQvxTcYQ-unsplash.jpg" alt="VIAJA POTS">
@@ -154,11 +160,79 @@
                 egestas pretium aenean
                 <div class="container">
                     <span>LEARN MORE</span>
-                    <span><button class="btn">Button</button></span>
+                    <span><button class="btn">ADD TO CART</button></span>
+                </div>
             </p>
             <br>
+            <img src="assests/tom-crew-YA2E3d7a9Wo-unsplash.jpg" alt="SERVIÇO PLATES">
+            <br>
+            <span>SERVIÇO PLATES</span>
+            <span>$35.00</span>
+            <p>
+                Tincidunt praesent semper feugiat nibh
+                sed. Vulputate mi sit amet mauris
+                commodo quis imperdiet massa. Amet
+                tellus cras adipiscing enim eu turpis
+                egestas pretium aenean.
+                <div class="container">
+                    <span>LEARN MORE</span>
+                    <span><button class="btn">ADD TO CART</button></span>
+                </div>
+            </p>
+            <br>
+            <img src="assests/oriento-l0ah3UBLppo-unsplash.jpg" alt="CAMPEÃO VASE">
+            <br>
+            <span>CAMPEÃO VASE</span>
+            <span>$37.00</span>
+            <p>
+                Tincidunt praesent semper feugiat nibh
+                sed. Vulputate mi sit amet mauris
+                commodo quis imperdiet massa. Amet
+                tellus cras adipiscing enim eu turpis
+                egestas pretium aenean.
+                <div class="container">
+                    <span>LEARN MORE</span>
+                    <span><button class="btn">ADD TO CART</button></span>
+                </div>
+            </p>
+            <br>
+            <img src="assests/tom-crew-SITGdvztUdg-unsplash.jpg" alt="TROCA BOWLS">
+            <br>
+            <span>TROCA BOWLS</span>
+            <span>$25.00</span>
+            <p>
+                Tincidunt praesent semper feugiat nibh
+                sed. Vulputate mi sit amet mauris
+                commodo quis imperdiet massa. Amet
+                tellus cras adipiscing enim eu turpis
+                egestas pretium aenean.
+                <div class="container">
+                    <span>LEARN MORE</span>
+                    <span><button class="btn">ADD TO CART</button></span>
+                </div>
+            </p>
+        </section>
+        <section class="CONTACT US">
+            <span>EMAIL</span>
+            <br>
+            <br>
+            <span>MESSAGE</span>
+            <br>
+            <br>
+            <div class="container">
+                <span><SEND class="btn">SEND</button></span>
+            </div>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <img src="assests/icons8-youtube-96.png" alt="YouTube">
+        <img src="assests/icons8-facebook-96 (1).png" alt=FaceBook">
+        <img src="assests/icons8-pottery-96 (1).png" alt="Pottery Icon">
+        <img src="assests/icons8-twitter-96.png" alt="Twitter">
+        <img src="assests/icons8-instagram-96.png" alt="Instagram">
+        <span>Pretium nibh ipsum consequat nisl vel pretium.</span>
+        <span>Amet tellus cras adipiscing enim eu turpis.</span>
+        <span>©Copyright 2015 - 2020</span>
+    </footer>
 </body>
 </html>
