Added missing h1, h2, h3 sections in HTML file

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     </header>
     <main>
         <section class="HOME">
-            <h1> <img src="assests/earl-wilcox-y3W0CzO063w-unsplash-alt.jpg" alt="CERAMICS CRAFTED BY HAND... FROM THE GROUND UP">
-            </h1>
+            <img src="assests/earl-wilcox-y3W0CzO063w-unsplash-alt.jpg" alt="CERAMICS CRAFTED BY HAND... FROM THE GROUND UP">
         </section>
         <section class="ABOUT US">
+            <h1>ABOUT US</h1>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                 ut labore et dolore magna aliqua. Neque laoreet suspendisse interdum consectetur libero id
@@ -59,6 +59,7 @@
             </p>
         </section>
         <section class="OUR PRODUCTS">
+            <h2>OUR PRODUCTS</h2>
             <img src="assests/tom-crew-7HuTGlUfQSo-unsplash.jpg" alt="MUNDO BOWLS">
             <br>
             <br>
@@ -213,6 +214,7 @@
             </p>
         </section>
         <section class="CONTACT US">
+            <h3>CONTACT US</h3>
             <span>EMAIL</span>
             <br>
             <br>
