wrapped div inside of divs in the main section of HTML file

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         </section>
         <section class="OUR PRODUCTS">
             <h2>OUR PRODUCTS</h2>
+            <div class="mundo-bowels">
             <img src="assests/tom-crew-7HuTGlUfQSo-unsplash.jpg" alt="MUNDO BOWLS">
             <span>MUNDO BOWELS</span>
             <span>$48.00</span>
@@ -69,6 +70,8 @@
                     <span><button class="btn">ADD TO CART</button></span>
                   </div>
             </p>
+            </div>
+            <div class="natureza-vase">
             <img src="assests/oriento-maVIpNNtmlQ-unsplash.jpg" alt="NATUREZA VASE">
             <span>NATUREZA VASE</span>
             <span>$37.00</span>
@@ -83,6 +86,8 @@
                     <span><button class="btn">ADD TO CART</button></span>
                 </div>
             </p>
+            </div>
+            <div class="feira-bowels">
             <img src="assests/tom-crew-bgIO-u4GEfI-unsplash.jpg" alt="FEIRA BOWLS">
             <span>FEIRA BOWLS</span>
             <span>$29.00</span>
@@ -95,6 +100,8 @@
                     <span><button class="btn">ADD TO CART</button></span>
                 </div>
             </p>
+            </div>
+            <div class="natureza-pots">
             <img src="assests/tom-crew-3uwu5K0RtaE-unsplash.jpg" alt="NATUREZA POTS">
             <span>NATUREZA POTS</span>
             <span>$59.00</span>
@@ -109,6 +116,8 @@
                     <span><button class="btn">ADD TO CART</button></span>
                 </div>
             </p>
+            </div>
+            <div class="pedra-vase">
             <img src="assests/linh-le-a0rE64YJDA4-unsplash.jpg" alt="PEDRA VASE">
             <span>PEDRA VASE</span>
             <span>$31.00</span>
@@ -123,6 +132,8 @@
                     <span><button class="btn">ADD TO CART</button></span>
                 </div>
             </p>
+            </div>
+            <div class="viaja-pots">
             <img src="assests/tom-crew-oiZAQvxTcYQ-unsplash.jpg" alt="VIAJA POTS">
             <span>VIAJA POTS</span>
             <span>$57.00</span>
@@ -137,6 +148,8 @@
                     <span><button class="btn">ADD TO CART</button></span>
                 </div>
             </p>
+            </div>
+            <div class="servico-plates">
             <img src="assests/tom-crew-YA2E3d7a9Wo-unsplash.jpg" alt="SERVIÇO PLATES">
             <span>SERVIÇO PLATES</span>
             <span>$35.00</span>
@@ -151,6 +164,8 @@
                     <span><button class="btn">ADD TO CART</button></span>
                 </div>
             </p>
+            </div>
+            <div class="campeao-vase">
             <img src="assests/oriento-l0ah3UBLppo-unsplash.jpg" alt="CAMPEÃO VASE">
             <span>CAMPEÃO VASE</span>
             <span>$37.00</span>
@@ -165,6 +180,8 @@
                     <span><button class="btn">ADD TO CART</button></span>
                 </div>
             </p>
+            </div>
+            <div class="troca-bowels">
             <img src="assests/tom-crew-SITGdvztUdg-unsplash.jpg" alt="TROCA BOWLS">
             <span>TROCA BOWLS</span>
             <span>$25.00</span>
@@ -179,6 +196,7 @@
                     <span><button class="btn">ADD TO CART</button></span>
                 </div>
             </p>
+            </div>
         </section>
         <section class="CONTACT US">
             <h3>CONTACT US</h3>
